--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "2.1.3"
   },
   "scripts": {
+    "serve": "serve -s build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
